modified:   .gitignore 	new file:   InvIndexer 	modified:   Makefile 	modified:   img/home.png 	modified:   img/search.png 	modified:   index/index.txt 	new file:   spidey 	deleted:    src/.Spider.h.swp 	deleted:    src/.tiny.c.swp 	modified:   src/tiny.c 	new file:   tiny 	modified:   web/add.html 	renamed:    web/toogle.html -> web/coogle.html 	renamed:    web/spider.html -> web/crawler.html 	modified:   web/home.html

--- a/web/coogle.html
+++ b/web/coogle.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1 style="font-family: 'Lancelot', cursive">Toogle</h1>
+<h1>search </h1>
 <form method="GET" action="search">
   <p>Search: <input type="text" name="value"/></p>
   <p><input type=submit></p>
