--- a/web/home.html
+++ b/web/home.html
@@ -11,11 +11,11 @@ Visit <a href="add.html">Our Addition Service</a>
 
 <h3>Want to try the search engine?</h3>
 
-Visit <a href="toogle.html">Toogle Service</a>
+Visit <a href="coogle.html">Search Service</a>
 
 <h3>Want to try web crawl ?</h3>
 
-Visit <a href="spider.html">spider </a>
+Visit <a href="crawler.html">Spider </a>
 
 </body>
 
